[gd_scene load_steps=11 format=3 uid="uid://cf2xc8n0g4w32"]

[ext_resource type="Script" path="res://LevelSelect/levelselect.gd" id="1_aae8f"]
[ext_resource type="Texture2D" uid="uid://dtq0ljkgmi88i" path="res://Textures/GUI/menu_v3.png" id="2_vbt4k"]
[ext_resource type="FontFile" uid="uid://dwo5a5m36hr35" path="res://Font/BungeeShade-Regular.ttf" id="3_1l1aj"]
[ext_resource type="AudioStream" uid="uid://ld464viujox8" path="res://Audio/Music/menu music.wav" id="4_xlp6f"]
[ext_resource type="Texture2D" uid="uid://chwtxjxr8687i" path="res://Textures/Buttons/levelone.png" id="5_a6gj3"]
[ext_resource type="FontFile" uid="uid://f502umyy2mu3" path="res://Font/BarlowCondensed-Medium.ttf" id="6_c5eo4"]
[ext_resource type="Texture2D" uid="uid://bjlvrdas432lr" path="res://Textures/Buttons/levelone_focus.png" id="6_tlite"]
[ext_resource type="Texture2D" uid="uid://2xm7sny1nr6l" path="res://Textures/Buttons/leveltwo.png" id="7_r56oc"]
[ext_resource type="Texture2D" uid="uid://c02mc0etcqpk3" path="res://Textures/Buttons/leveltwo_focus.png" id="9_argvk"]
[ext_resource type="PackedScene" uid="uid://b7c7gsdx2rkjm" path="res://Utility/basic_button.tscn" id="10_qmkho"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aae8f")

[node name="MenuBackdrop" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 361.0
texture = ExtResource("2_vbt4k")
expand_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.25
offset_bottom = 20.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.32549, 0.294118, 0.65098, 1)
theme_override_fonts/font = ExtResource("3_1l1aj")
theme_override_font_sizes/font_size = 48
text = "Kitchen Survivor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xlp6f")
volume_db = -10.0
autoplay = true

[node name="Test" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 394.0
offset_top = 302.0
offset_right = 434.0
offset_bottom = 325.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10

[node name="levelone_group" type="Node2D" parent="."]

[node name="Border" type="ReferenceRect" parent="levelone_group"]
offset_left = 179.0
offset_top = 132.0
offset_right = 486.0
offset_bottom = 192.0
border_color = Color(0.631373, 0.623529, 0.776471, 1)
editor_only = false

[node name="Seperator" type="ReferenceRect" parent="levelone_group"]
offset_left = 422.0
offset_top = 132.0
offset_right = 422.0
offset_bottom = 192.0
border_color = Color(0.631373, 0.623529, 0.776471, 1)
editor_only = false

[node name="played" type="Label" parent="levelone_group"]
offset_left = 430.0
offset_top = 143.0
offset_right = 543.0
offset_bottom = 166.0
scale = Vector2(0.52, 0.52)
theme_override_colors/font_color = Color(0.356863, 0.341176, 0.670588, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("6_c5eo4")
theme_override_font_sizes/font_size = 13
text = "Tries: 0"
autowrap_mode = 3

[node name="won" type="Label" parent="levelone_group"]
offset_left = 430.0
offset_top = 162.0
offset_right = 543.0
offset_bottom = 181.0
scale = Vector2(0.52, 0.52)
theme_override_colors/font_color = Color(0.356863, 0.341176, 0.670588, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("6_c5eo4")
theme_override_font_sizes/font_size = 13
text = "Wins: 0
"
autowrap_mode = 3

[node name="levelone_btn" type="TextureButton" parent="levelone_group"]
offset_left = 183.0
offset_top = 136.0
offset_right = 283.0
offset_bottom = 186.0
focus_neighbor_top = NodePath("../../btn_back")
focus_neighbor_bottom = NodePath("../../leveltwo_group/leveltwo_btn")
texture_normal = ExtResource("5_a6gj3")
texture_focused = ExtResource("6_tlite")
ignore_texture_size = true
stretch_mode = 0

[node name="levelone_text" type="Label" parent="levelone_group"]
offset_left = 298.0
offset_top = 137.0
offset_right = 533.0
offset_bottom = 238.0
scale = Vector2(0.52, 0.52)
theme_override_colors/font_color = Color(0.356863, 0.341176, 0.670588, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("6_c5eo4")
theme_override_font_sizes/font_size = 13
text = "Day One: 

It's your first day in the ktichen and you're just out here trying to make it through without getting fired. Good luck..."
autowrap_mode = 3

[node name="leveltwo_group" type="Node2D" parent="."]
position = Vector2(0, 62)

[node name="Seperator" type="ReferenceRect" parent="leveltwo_group"]
offset_left = 422.0
offset_top = 132.0
offset_right = 422.0
offset_bottom = 192.0
border_color = Color(0.631373, 0.623529, 0.776471, 1)
editor_only = false

[node name="Border" type="ReferenceRect" parent="leveltwo_group"]
offset_left = 179.0
offset_top = 132.0
offset_right = 486.0
offset_bottom = 192.0
border_color = Color(0.631373, 0.623529, 0.776471, 1)
editor_only = false

[node name="leveltwo_btn" type="TextureButton" parent="leveltwo_group"]
offset_left = 183.0
offset_top = 136.0
offset_right = 283.0
offset_bottom = 186.0
focus_neighbor_top = NodePath("../../levelone_group/levelone_btn")
focus_neighbor_bottom = NodePath("../../btn_back")
texture_normal = ExtResource("7_r56oc")
texture_focused = ExtResource("9_argvk")
ignore_texture_size = true
stretch_mode = 0

[node name="leveltwo_text" type="Label" parent="leveltwo_group"]
offset_left = 298.0
offset_top = 137.0
offset_right = 533.0
offset_bottom = 238.0
scale = Vector2(0.52, 0.52)
theme_override_colors/font_color = Color(0.356863, 0.341176, 0.670588, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("6_c5eo4")
theme_override_font_sizes/font_size = 13
text = "Day Two: 

Things are getting weird..."
autowrap_mode = 3

[node name="played" type="Label" parent="leveltwo_group"]
offset_left = 430.0
offset_top = 136.0
offset_right = 543.0
offset_bottom = 159.0
scale = Vector2(0.52, 0.52)
theme_override_colors/font_color = Color(0.356863, 0.341176, 0.670588, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("6_c5eo4")
theme_override_font_sizes/font_size = 13
text = "Tries: 0"
autowrap_mode = 3

[node name="won" type="Label" parent="leveltwo_group"]
offset_left = 430.0
offset_top = 155.0
offset_right = 543.0
offset_bottom = 174.0
scale = Vector2(0.52, 0.52)
theme_override_colors/font_color = Color(0.356863, 0.341176, 0.670588, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("6_c5eo4")
theme_override_font_sizes/font_size = 13
text = "Wins: 0"
autowrap_mode = 3

[node name="btn_back" parent="." instance=ExtResource("10_qmkho")]
layout_mode = 0
offset_left = 280.0
offset_top = 279.0
offset_right = 360.0
offset_bottom = 311.0
focus_neighbor_top = NodePath("../leveltwo_group/leveltwo_btn")
focus_neighbor_bottom = NodePath("../levelone_group/levelone_btn")
theme_override_fonts/font = ExtResource("6_c5eo4")
text = "BACK"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="levelone_group/levelone_btn" to="." method="_on_levelone_btn_pressed"]
[connection signal="pressed" from="leveltwo_group/leveltwo_btn" to="." method="_on_leveltwo_btn_pressed"]
[connection signal="click_end" from="btn_back" to="." method="_on_btn_back_click_end"]
